kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-deploy-server
spec:
  selector:
    matchLabels:
      app: docker-deploy-server
  template:
    metadata:
      labels:
        app: docker-deploy-server
    spec:
      volumes:
        - name: fleets
          persistentVolumeClaim:
            claimName: docker-deploy-server-fleets
      containers:
        - name: docker-deploy-server
          image: ijmacd/docker-deploy-server
          resources:
            limits:
              memory: "16Mi"
              cpu: "50m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: fleets
              mountPath: /fleets
